css/frm_admin.css
/* ... */
ul.frm_form_nav li.last{
	width:20%;
}
ul.frm_form_nav li.last > a{
	font-weight:lighter;
	font-size:12px;
	border-right:solid 1px #c6c6c6;
	border-top-right-radius:4px;
	border-bottom-right-radius:4px;
	padding:5px 8px;
	color:#333;
}
.frm_form_nav .frm-dropdown-menu li {
	float:none;	
}
.frm_form_nav .frm-dropdown-menu a{
	font-size:12px;
	background:none;
	border:none;
	text-align:left;
}
.frm_form_nav .frm-dropdown-menu a:hover {background-color:#eaf2fa;}
.frm_title_head{color:#747474;margin:0;}
.wrap > .subsubsub{clear:both; margin:0;}
#titlediv input#title:disabled{
	color:inherit;
	background-color:rgba(255, 255, 255, 0.25);
}
#titlediv{
	margin-bottom:20px;
}
#titlediv #title{
	line-height:1.5;
	height:auto;
}
#post-body-content{
	margin-bottom:0;
}
.frm_no_sidebar #post-body-content{
	width:auto;
}
.frm_no_sidebar #titlediv{
	width:570px;
	float:left;
}
.frm_no_sidebar .postbox-container{
	float:right;
}
#poststuff .frm_no_sidebar .postbox-container{
	width:auto;
}
.frm_sidebar select{
	width:100%;
	margin-left:0;
	margin-right:0;
}
.frm_sidebar #search-submit{
	float:right;
}

/* Build New Form page */

.major-publishing-actions.frm_create_form_header{
    padding:8px 0;
}

.major-publishing-actions.frm_create_form_header .frm_create_form_header_inner{
    font-size:15px;
    background:transparent;
}

.frm-menu-boxes .frm_blank_form_text{
    padding-bottom:26px;
}

input.frm_insert_in_template{
    font-size:10px;
    width:98%;
    font-weight:normal
}

/* Generic Classes */
.frm_invisible{
    visibility:hidden;
}

.frm_clear_none{
    clear:none;
}

.frm_clear{
    clear:both;
}

.frm_block,
.frm_no_section_fields.frm_block{
    display:block;
}

.frm_inline{
	display:inline;
}

.button.frm_hidden,
.frm_hidden{
    display:none;
}

.frm_no_margin{
    margin:0;
}

.frm_no_top_margin{
    margin-top:0;
}

.frm_no_bottom_margin{
    margin-bottom:0;
}

.frm_tiny_top_margin{
	margin-top:1px;
}

.frm_small_top_margin{
	margin-top:5px;
}

.frm_cursor_pointer{
    cursor:pointer;
}

.frm_right_text{
    text-align:right;
}

.frm_submit .frm_full_opacity, .frm_full_opacity{
    opacity:1;
}

div.frm_msg_padding{
    padding:5px;
}

.frm_med_padding{
    padding:10px;
}

.actions.frm_visible_overflow{
    overflow:visible;
}

.frm-dropdown-menu.frm-on-top{
    z-index:99999;
}

.post-new-php.post-type-frm_display #poststuff {padding-top:10px;}
.frm_forms.with_frm_style{max-width:100%;}
label.frm_primary_label,
#frm_form_editor_container label.frm_primary_label{
	font-weight:bold;
}
.form-field label.frm_primary_label{
	display:block;
	float:none;
	width:auto;
}
#frm_form_editor_container label.frm_primary_label{
	color:#444;
	text-align:left;
	margin:0;
	padding:0;
	width:auto;
	max-width:90%;
	min-height:20px;
}

#frm_form_editor_container label.frm_primary_label:hover{
	cursor:text;
}

form label.frm_primary_label input{font-size:12px;}
.with_frm_style form .form-field{margin-bottom:20px;}
.with_frm_style form div.description, .frm_error, .with_frm_style form div.description textarea{
	padding:0;
	font-size:11px;
	color:#666;
	font-weight:normal;
	text-align:left;
	font-style:normal;
}

#frm_form_editor_container .divider_section_only label.frm_primary_label {
	font-size:16px;
}

.with_frm_style form div.description, .frm_error{
	margin:0;
}
.frm_error{color:#B94A48;}
.with_frm_style form .frm_blank_field input,
.with_frm_style form .frm_blank_field textarea,
.with_frm_style form .frm_blank_field select,
.with_frm_style form .frm_blank_field .g-recaptcha iframe{
	border-color:#B94A48;
}
.with_frm_style form .frm_blank_field label{color:#B94A48;}
.frm_required{
	color:#B94A48;
}

.with_frm_style .wp-editor-container textarea,
.postbox .wp-editor-container textarea,
.frm_remove_border{
    border:none;
}
.with_frm_style .mceIframeContainer,
.postbox .mceIframeContainer{
    background-color:#fff;
}
.frm_error_style{
    color:#B94A48;
    border:1px solid #EBCCD1;
    background-color:#F2DEDE;
    padding:8px 15px;
    font-size:14px;
    margin:5px 0 15px;
    -moz-border-radius:4px;
    -webkit-border-radius:4px;
    border-radius:4px;
}

.frm_pro_license_msg{
	clear:left;
	margin-top:10px;
}

.update-nag.frm-update-to-pro{
	display:block;
	text-align:center;
	border:1px solid #EE4210;
	border-radius:4px;
	background:#EF7E59;
	color:#fff;
	font-size:19px;
	line-height:2.1em;
	margin-top:30px;
}

.update-nag.frm-update-to-pro span{
	font-weight:100;
}

.update-nag.frm-update-to-pro a{
	color:#fff;
	font-size:18px;
	height:auto;
	margin:0 15px;
	background-color:#d55a1e;
	box-shadow: 0 1px 0 #BB3E01;
	border-color:transparent;
	padding:7px 15px;
}

.update-nag.frm-update-to-pro a:hover{
	background-color:#d55a1e;
	color:#fff;
	border:1px solid #BB3E01;
}

.frm_pro_heading{
	position:absolute;
	left:285px;
	line-height: 2.3em !important;
}

.upgrade_to_pro .frm_check_icon{
	color:#468847;
}

.widefat.frm_pricing thead th,
.widefat.frm_pricing td{
	text-align:center;
}

.widefat th.frm_table_break{
	background-color:#999;
	color:#fff;
	text-align:center;
}

.plugin-card.plugin-card-formidable-pro{
	border:2px solid #0073aa;
}

.frm-no-thumb.plugin-card .name,
.frm-no-thumb.plugin-card .desc{
	margin-left:0;
}

#frm_bulk_options{
    height:240px;
    width:335px;
    float:right;
}

.frm_no_captcha_text{
    font-weight:bold;
    color:#AA0000;
}

.frm_image_from_url{
	height:50px;
}

.frm_pro_tip{
	font-size:12px;
	color:#666;
}

.frm_pro_tip a,
.frm_pro_tip span,
.frm_pro_tip .frm_check1_icon{
	color:#EF7E59;
}

.frm_pro_tip .frm_check1_icon{
	vertical-align: middle;
}

.frm_pro_tip{
	border:1px solid #EF7E59;
	display:block;
	padding:2px 5px 0;
	background:#FBF0EC;
	border-radius:4px;
	text-align:center;
}

.frm_field_list .frm_pro_tip{
	margin-top:-14px;
}

.nav-tab-wrapper .frm_pro_tip{
	float:right;
}

.frm_pro_tip:hover{
	color:#666;
}

.frm_pro_tip:hover span{
	color:#F0430E;
}
/* ... */

